error_send.log
[0m[7m[1m[31m FAIL [39m[22m[27m[0m [2msrc/server/integrations/gmail/__tests__/[22m[1msend.test.ts[22m
  [1m● [22mTest suite failed to run

    [1m[31mJest encountered an unexpected token[39m[22m

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see [4mhttps://jestjs.io/docs/ecmascript-modules[24m for how to enable it.
     • If you are trying to use TypeScript, see [4mhttps://jestjs.io/docs/getting-started#using-typescript[24m
     • To have some of your "node_modules" files transformed, you can specify a custom [1m"transformIgnorePatterns"[22m in your config.
     • If you need a custom transformation specify a [1m"transform"[22m option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the [1m"moduleNameMapper"[22m config option.

    You'll find more details and examples of these config options in the docs:
    [36mhttps://jestjs.io/docs/configuration[39m
    For information about custom transformations, see:
    [36mhttps://jestjs.io/docs/code-transformation[39m

    [1m[31mDetails:[39m[22m

    C:\Users\marte\Baked for Brands\bakedbot-for-brands\node_modules\jose\dist\browser\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export { compactDecrypt } from './jwe/compact/decrypt.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 32 |[39m     serviceAccount [33m=[39m [33mJSON[39m[33m.[39mparse(serviceAccountKey)[33m;[39m
     [90m 33 |[39m   } [36mcatch[39m (e) {
    [31m[1m>[22m[39m[90m 34 |[39m     [36mtry[39m {
     [90m    |[39m               [31m[1m^[22m[39m
     [90m 35 |[39m       [36mconst[39m json [33m=[39m [33mBuffer[39m[33m.[39m[36mfrom[39m(serviceAccountKey[33m,[39m [32m"base64"[39m)[33m.[39mtoString([32m"utf8"[39m)[33m;[39m
     [90m 36 |[39m       serviceAccount [33m=[39m [33mJSON[39m[33m.[39mparse(json)[33m;[39m
     [90m 37 |[39m     } [36mcatch[39m (decodeError) {[0m

      [2mat Runtime.createScriptFromCode ([22mnode_modules/jest-runtime/build/index.js[2m:1505:14)[22m
      [2mat Object.<anonymous> ([22mnode_modules/jwks-rsa/src/utils.js[2m:1:116)[22m
      [2mat Object.<anonymous> ([22mnode_modules/jwks-rsa/src/JwksClient.js[2m:2:33)[22m
      [2mat Object.<anonymous> ([22mnode_modules/jwks-rsa/src/index.js[2m:1:126)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/utils/jwt.js[2m:24:14)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/auth/token-verifier.js[2m:26:15)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/auth/base-auth.js[2m:26:26)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/auth/tenant-manager.js[2m:23:21)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/auth/auth.js[2m:22:26)[22m
      [2mat Object.<anonymous> ([22mnode_modules/firebase-admin/lib/auth/index.js[2m:27:16)[22m
      [2mat Object.<anonymous> ([22msrc/firebase/server-client.ts[2m:34:15)[22m
      [2mat Object.<anonymous> ([22msrc/server/integrations/gmail/token-storage.ts[2m:19:23)[22m
      [2mat Object.<anonymous> ([22msrc/server/integrations/gmail/send.ts[2m:13:23)[22m
      [2mat Object.<anonymous> ([22m[0m[36msrc/server/integrations/gmail/__tests__/send.test.ts[39m[0m[2m:13:15)[22m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        3.151 s
[2mRan all test suites[22m[2m matching [22m/src\\server\\integrations\\gmail\\__tests__\\send.test.ts/i[2m.[22m
